--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.xaml
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/App.xaml
@@ -5,7 +5,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
-                <ResourceDictionary Source="pack://application:,,,/SachaBarber.CQRS.Demo.WPFClient;component/Resources/Options.Styles.Threading.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/SachaBarber.CQRS.Demo.WPFClient;component/Resources/Styles.Threading.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/SachaBarber.CQRS.Demo.WPFClient;component/Resources/Styles.Dialogs.xaml"/>
                 
                 <!-- Get around a bug in .NET 4.0 : http://wpftutorial.net/MergedDictionaryPerformance.html -->
                 <ResourceDictionary>
