--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/ShellWindow.xaml
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/ShellWindow.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="SachaBarber.CQRS.Demo.WPFClient.ShellWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:converters="clr-namespace:SachaBarber.CQRS.Demo.WPFClient.Converters"
         Title="CQRS Demo" Height="300" Width="300" 
         WindowStyle="ToolWindow" Background="#ff656565">
-    
-    
+
+
     <Window.Resources>
         <DataTemplate x:Key="StoreItemTemplate">
             <Border x:Name="theBorder" Margin="5" Background="Black" BorderThickness="3" BorderBrush="Black">
@@ -20,30 +21,89 @@
                 </DataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
+
+
+        <Storyboard x:Key="EaseInAnimation">
+            <DoubleAnimation 
+			    Duration="00:00:01"
+				From="0"
+				To="-300"
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" 
+                Storyboard.TargetName="ordersPanel">
+                <DoubleAnimation.EasingFunction>
+                    <PowerEase EasingMode="EaseInOut" Power="100"  />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+        </Storyboard>
+        <Storyboard x:Key="EaseOutAnimation">
+            <DoubleAnimation 
+				Duration="00:00:01"
+				From="-300"
+				To="0"
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" 
+                Storyboard.TargetName="ordersPanel">
+                <DoubleAnimation.EasingFunction>
+                    <PowerEase EasingMode="EaseInOut" Power="100"  />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+        </Storyboard>
+
+
     </Window.Resources>
 
 
 
-    <StackPanel Orientation="Vertical">
+    <DockPanel LastChildFill="True">
 
-       <Grid Height="100" Background="OrangeRed" HorizontalAlignment="Stretch">
-           <Label FontFamily="Segoe UI" FontSize="40" FontWeight="Normal" Content="CREATE AND AMEND ORDERS"
+        <Grid Height="100" Background="OrangeRed" HorizontalAlignment="Stretch" DockPanel.Dock="Top">
+            <Label FontFamily="Segoe UI" FontSize="40" FontWeight="Normal" Content="CREATE AND AMEND ORDERS"
                   VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="10" Foreground="Black"></Label>
-       
-        <Button HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center"
-                Command="{Binding CreateNewOrderCommand}" Content="Create New Order" ToolTip="Select some comics and click here to create a new order"/>
-       </Grid>
+
+            <Button HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center"
+                    Command="{Binding CreateNewOrderCommand}" Content="Create New Order" ToolTip="Select some comics and click here to create a new order"/>
+        </Grid>
 
 
-        <ItemsControl ItemsSource="{Binding StoreItems}" ItemTemplate="{StaticResource StoreItemTemplate}" Margin="10">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-        </ItemsControl>
-    </StackPanel>
+        <Grid>
+            <ItemsControl ItemsSource="{Binding StoreItems}" ItemTemplate="{StaticResource StoreItemTemplate}" Margin="10">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
 
-   
-    
+
+            <Grid x:Name="ordersPanel" DataContext="{Binding OrdersViewModel}"
+                    Margin="0,60,-300,60"
+ 		            RenderTransformOrigin="0.5,0.5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Stretch"
+                    Visibility="{Binding HasOrders, Converter={x:Static converters:BoolToVisibilityCollapsedConverter.Instance}, ConverterParameter='True'}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50"/>
+                    <ColumnDefinition Width="300"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Grid.RenderTransform>
+                <ToggleButton x:Name="btn" Grid.Row="0" Grid.Column="0"  Background="OrangeRed" 
+				        VerticalAlignment="Center"  Width="50" Height="50">
+                </ToggleButton>
+                <Grid Width="300" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" 
+				        VerticalAlignment="Stretch" Background="OrangeRed"/>
+
+            </Grid>
+
+        </Grid>
+    </DockPanel>
+
+
+
 </Window>
