--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/Resources/Styles.Threading.xaml
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/Resources/Styles.Threading.xaml
@@ -3,17 +3,25 @@
                     xmlns:controls="clr-namespace:SachaBarber.CQRS.Demo.WPFClient.Controls"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-
+    <Style x:Key="threadingFailedLabelStyle" TargetType="{x:Type Label}">
+        <Setter Property="Foreground" Value="OrangeRed"/>
+        <Setter Property="FontWeight" Value="Regular"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0"/>
+    </Style>
 
 
     <DataTemplate x:Key="ErrorTemplate">
         <Border
-            Background="White">
+            Background="Transparent">
             <Grid
                 Margin="10"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
-                Background="White">
+                Background="Transparent">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -23,14 +31,14 @@
                 <StackPanel
                     Orientation="Horizontal"
                     HorizontalAlignment="Stretch"
-                    Background="White">
+                    Background="Transparent">
                     <!-- Warning icon -->
                     <Viewbox Width="50" Height="50" Margin="5">
                         <Grid>
                             <Grid Name="backgroundGrid" Width="48" Height="48" Visibility="Visible">
-                                <Path Data="M50.5,4.7500001C25.232973,4.75 4.75,25.232973 4.7500001,50.5 4.75,75.767029 25.232973,96.25 50.5,96.25 75.767029,96.25 96.25,75.767029 96.25,50.5 96.25,25.232973 75.767029,4.75 50.5,4.7500001z M50.5,0C78.390381,0 101,22.609621 101,50.5 101,78.390381 78.390381,101 50.5,101 22.609621,101 0,78.390381 0,50.5 0,22.609621 22.609621,0 50.5,0z" Stretch="Fill" Fill="#FFF70000" Name="Stroke" Visibility="Visible" />
+                                <Path Data="M50.5,4.7500001C25.232973,4.75 4.75,25.232973 4.7500001,50.5 4.75,75.767029 25.232973,96.25 50.5,96.25 75.767029,96.25 96.25,75.767029 96.25,50.5 96.25,25.232973 75.767029,4.75 50.5,4.7500001z M50.5,0C78.390381,0 101,22.609621 101,50.5 101,78.390381 78.390381,101 50.5,101 22.609621,101 0,78.390381 0,50.5 0,22.609621 22.609621,0 50.5,0z" Stretch="Fill" Fill="OrangeRed" Name="Stroke" Visibility="Visible" />
                             </Grid>
-                            <Path Data="F1M874.094,289.369L854.3,254.63C854.028,254.151 853.515,253.856 852.958,253.856 852.403,253.856 851.89,254.151 851.617,254.63L831.824,289.369C831.555,289.84 831.559,290.416 831.835,290.883 832.111,291.348 832.618,291.634 833.165,291.634L872.752,291.634C873.299,291.634 873.805,291.348 874.081,290.883 874.357,290.416 874.361,289.84 874.094,289.369 M855.653,287.189L850.264,287.189 850.264,282.745 855.653,282.745 855.653,287.189z M855.653,279.41L850.264,279.41 850.264,266.077 855.653,266.077 855.653,279.41z" Stretch="Uniform" Fill="#FFFF0B0B" Width="26" Height="26" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
+                            <Path Data="F1M874.094,289.369L854.3,254.63C854.028,254.151 853.515,253.856 852.958,253.856 852.403,253.856 851.89,254.151 851.617,254.63L831.824,289.369C831.555,289.84 831.559,290.416 831.835,290.883 832.111,291.348 832.618,291.634 833.165,291.634L872.752,291.634C873.299,291.634 873.805,291.348 874.081,290.883 874.357,290.416 874.361,289.84 874.094,289.369 M855.653,287.189L850.264,287.189 850.264,282.745 855.653,282.745 855.653,287.189z M855.653,279.41L850.264,279.41 850.264,266.077 855.653,266.077 855.653,279.41z" Stretch="Uniform" Fill="OrangeRed" Width="26" Height="26" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
                             </Path>
                         </Grid>
                     </Viewbox>
@@ -42,7 +50,7 @@
                 <TextBox Grid.Row="1" 
                      TextWrapping="Wrap" 
                      BorderThickness="0"
-                     Foreground="Black"   
+                     Foreground="White"   
                      FontSize="12"                     
                      FontFamily="Segoe UI"
                      FontWeight="Regular"
@@ -67,7 +75,7 @@
                                 Margin="5"
                                 FontSize="12"                     
                                 FontFamily="Segoe UI"
-                                Foreground="Black"                     
+                                Foreground="White"                     
                                 BorderBrush="Transparent" 
                                 Background="Transparent"
                                 IsReadOnly="True"
@@ -82,9 +90,9 @@
     </DataTemplate>
 
     <DataTemplate x:Key="BusyTemplate">
-        <Border Background="White">
+        <Border Background="Transparent">
             <Grid Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
-              Background="White">
+                    Background="Transparent">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Label
                         FontSize="12"                     
@@ -95,8 +103,9 @@
                         Foreground="Black"
                         VerticalAlignment="Bottom"
                         VerticalContentAlignment="Bottom" />
-                    <Viewbox Width="70" Height="70" Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <controls:Spinner />
+                    <Viewbox Width="70" Height="70" Margin="10" 
+                             HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <controls:Spinner Width="100" Height="100" />
                     </Viewbox>
                 </StackPanel>
             </Grid>
