--- a/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/Controls/Spinner.xaml
+++ b/SachaBarber.CQRS.Demo/SachaBarber.CQRS.Demo.WPFClient/Controls/Spinner.xaml
@@ -7,7 +7,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <Style x:Key="spinnerTrack" TargetType="{x:Type Path}">
-            <Setter Property="Stroke" Value="LightGray"/>
+            <Setter Property="Stroke" Value="Black"/>
             <Setter Property="StrokeThickness" Value="16"/>
             <Setter Property="Data">
                 <Setter.Value>
@@ -17,7 +17,7 @@
         </Style>
 
         <Style x:Key="spinnerArc" TargetType="{x:Type Path}">
-            <Setter Property="Stroke" Value="CornflowerBlue"/>
+            <Setter Property="Stroke" Value="OrangeRed"/>
             <Setter Property="StrokeThickness" Value="16"/>
             <Setter Property="Data">
                 <Setter.Value>
